--- a/web/app/globals.css
+++ b/web/app/globals.css
@@ -40,6 +40,10 @@ body {
   line-height: 1.35;
 }
 
+:where(h1, h2, h3, h4, h5, h6, p, a, span, li, label, input, textarea, button, select) {
+  font-size: 15px !important;
+}
+
 code,
 pre,
 kbd,
